--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ web-build/
 .env
 # macOS
 .DS_Store
+package.lock.json
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
