--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "react-router": "^6.9.0",
     "sequelize": "^6.29.0"
   }
 }
